--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-setuptools~=67.8.0
-beautifulsoup4~=4.12.2
-librosa~=0.10.0.post2
-numpy~=1.24.3
-webrtcvad~=2.0.10
-scipy~=1.10.1
-Unidecode~=1.3.6
-inflect~=6.0.4
-pandas~=2.0.2
-soundfile~=0.12.1
-pydub~=0.25.1
-tqdm~=4.65.0
-scrapetube~=2.3.1
-boto3~=1.26.151
-requests~=2.31.0
+setuptools~=67.8.0  # Package installer
+beautifulsoup4~=4.12.2  # Web scraping library
+librosa~=0.10.0.post2  # Audio analysis library
+numpy~=1.24.3  # Numerical computing library
+webrtcvad~=2.0.10  # Voice activity detection library
+scipy~=1.10.1  # Scientific computing library
+Unidecode~=1.3.6  # Unicode string library
+inflect~=6.0.4  # Inflection library for natural language processing
+pandas~=2.0.2  # Data analysis library
+soundfile~=0.12.1  # Audio file I/O library
+pydub~=0.25.1  # Audio processing library
+tqdm~=4.65.0  # Progress bar library
+boto3~=1.26.151  # AWS SDK for Python
+requests~=2.31.0  # HTTP library
+pycryptodomex~=3.18.0  # Cryptography library
+youtube-transcript-api>=0.4.1  # YouTube video transcript library
+vtt_to_srt3==0.1.8.9  # WebVTT to SRT subtitle conversion library
